ETDA-1112 Moved author email contact list to display under the author menu for Admin main navigation for the grad school only. ETDA-1115 Fixed tests when admin edits submissions (to work with collapsed sections).

--- a/app/javascript/styles/base/_base.scss
+++ b/app/javascript/styles/base/_base.scss
@@ -433,6 +433,22 @@ select.disabled {
   padding: 1px
 }
 
+.report-buttons li a {
+  color: $classic-white;
+}
+
+.report-buttons li {
+  border: 1px solid $blue-light;
+  background-color: $medium-blue-bright;
+  border-radius: $border-radius-large;
+  padding: .5em;
+}
+
+.report-buttons ul {
+  list-style-type: none;
+  padding: 1px
+}
+
 p.hint
 {
   color: $gray-med-dark
